RESOLVED FIXED43501
Down-sampling doesn't work for some GIF files
https://bugs.webkit.org/show_bug.cgi?id=43501
Summary Down-sampling doesn't work for some GIF files
Yong Li
Reported 2010-08-04 12:14:46 PDT
GIF reader can call "setSize()" multiple times. The current implementation doesn't clear the old down-sampling maps before adding new entries. Subsequent binary searches can give unexpected results.
Attachments
the patch (2.75 KB, patch)
2010-08-04 12:24 PDT, Yong Li
no flags
Yong Li
Comment 1 2010-08-04 12:24:52 PDT
Created attachment 63479 [details] the patch
WebKit Commit Bot
Comment 2 2010-08-05 13:02:15 PDT
Comment on attachment 63479 [details] the patch Clearing flags on attachment: 63479 Committed r64777: <http://trac.webkit.org/changeset/64777>
WebKit Commit Bot
Comment 3 2010-08-05 13:02:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.