2010-08-05  Yong Li  <yoli@rim.com>

Reviewed by Adam Treat.

        Fix the problem that down-sampling code doesn't work
        for some GIF's. GIF reader can call setSize() multiple times.
        We should clear the scaling maps before adding new entries.
        Also add a fast path to check if the size has changed since last time.

        https://bugs.webkit.org/show_bug.cgi?id=43501

        * platform/image-decoders/ImageDecoder.cpp:
        (WebCore::ImageDecoder::prepareScaleDataIfNecessary):
        * platform/image-decoders/gif/GIFImageDecoder.cpp:
        (WebCore::GIFImageDecoder::setSize):

Canonical link: https://commits.webkit.org/55593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64777 268f45cc-cd09-0410-ab3c-d52691b4dbfc