WebCore/platform/image-decoders/gif/GIFImageDecoder.cpp
@@ -61,6 +61,9 @@ bool GIFImageDecoder::isSizeAvailable()
 
 bool GIFImageDecoder::setSize(unsigned width, unsigned height)
 {
+    if (ImageDecoder::isSizeAvailable() && size().width() == width && size().height() == height)
+        return true;
+
     if (!ImageDecoder::setSize(width, height))
         return false;
 
